@@ -1,3 +1,6 @@
+2012-12-18  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Taper/Worker.pm: Ignore duplicate DONE/FAILED messages.
+
 2012-12-13 Dan Locks <dwlocks@zmanda.com>
 	* packaging/common/post_inst_functions.sh: revoke rw permissions for
 	  group and other
